# cuda_test

./: .gitignore  CMakeLists.txt
src/: main.cu
